fixed wrapping issue

--- a/css/objectlab.css
+++ b/css/objectlab.css
@@ -215,7 +215,7 @@ h1, .h1, h2, .h2, h3, .h3 {
   color: #FFF;
   font-size: 16px;
   font-weight: 400;
-  padding: 5px 15px 5px 20px;
+  padding: 5px 13px 5px 20px;
 }
 
 .sub-nav .navbar-nav > li.title > a {
